# DiffSynth-Engine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  1.py  LICENSE  MANIFEST.in  README.md  compare.py  proxy_server.py  pyproject.toml  requirements.txt  setup.py  wan_t2v_api.py
.github/workflows/: python-publish.yml
diffsynth_engine/: __init__.py  constants.py
diffsynth_engine/algorithm/noise_scheduler/: __init__.py  base_scheduler.py
diffsynth_engine/algorithm/sampler/: __init__.py  base.py  ddpm.py  dpmpp_2m.py  dpmpp_2m_sde.py  dpmpp_3m_sde.py  euler.py  euler_ancestral.py  flow_match_euler.py
diffsynth_engine/conf/keymap/: __init__.py  flux_civitai.py  sd_civitai.py  sdxl_civitai.py
diffsynth_engine/configs/: __init__.py  clip.py  controlnet.py  model_loader_config.py  pipeline.py  t5.py
diffsynth_engine/models/: __init__.py  attention.py  base.py  clip.py  flux_dit.py  flux_text_encoder.py  flux_vae.py  sd3_dit.py  sd3_text_encoder.py  sd3_vae.py  sd_text_encoder.py  sd_unet.py  sd_vae.py  sdxl_text_encoder.py  sdxl_unet.py  sdxl_vae.py  svd_unet.py  t5.py  tiler.py  utils.py
diffsynth_engine/models/basic/: attention.py  lora.py  relative_position_emb.py  tiler.py  timestep.py  transformer_helper.py  unet_helper.py
diffsynth_engine/models/components/: clip.py  siglip.py  t5.py  vae.py
diffsynth_engine/models/flux/: __init__.py  flux_controlnet.py  flux_dit.py  flux_dit_fbcache.py  flux_ipadapter.py  flux_redux.py  flux_text_encoder.py  flux_vae.py
diffsynth_engine/models/hunyuan3d/: __init__.py  dino_image_encoder.py  hunyuan3d_dit.py  hunyuan3d_vae.py  moe.py  surface_extractor.py  volume_decoder.py
diffsynth_engine/models/qwen_image/: __init__.py  qwen2_5_vl.py  qwen_image_dit.py  qwen_image_dit_fbcache.py  qwen_image_vae.py
diffsynth_engine/models/sd/: __init__.py  (+4 more)
diffsynth_engine/pipelines/: __init__.py  base.py  controlnet_helper.py  flux_image.py  hunyuan3d_shape.py  qwen_image.py  sd_image.py  sdxl_image.py  utils.py  wan_s2v.py  wan_video.py  wan_video_tp.py
diffsynth_engine/processor/: canny_processor.py  depth_processor.py
diffsynth_engine/schedulers/: __init__.py  ddim.py  flow_match.py
diffsynth_engine/tokenizers/: __init__.py  base.py  clip.py  qwen2.py  qwen2_vl_image_processor.py  qwen2_vl_processor.py  t5.py  wan.py
diffsynth_engine/tools/: __init__.py  flux_inpainting.py  flux_inpainting_tool.py  flux_outpainting.py  flux_outpainting_tool.py  flux_reference_tool.py  flux_replace_tool.py
diffsynth_engine/utils/: cache.py  constants.py  download.py  downloader.py  env.py  flag.py  fp8_linear.py  fp8_linear_optimized.py  gguf.py  hash.py  image.py  loader.py  lock.py  logging.py  modelscope.py  offload.py  onnx.py  parallel.py  platform.py  prompt.py  video.py
docs/: tutorial.md  tutorial_zh.md
examples/: flux_lora.py  flux_parallel.py  flux_text_to_image.py  model_benchmark_readme.md  model_perf_benchmark.py  qwen_image_edit.py  qwen_image_eligen.py  qwen_image_parallel.py  sdxl_text_to_image.py  wan_flf_to_video.py  wan_image_to_video.py  wan_lora.py  wan_speech_to_video.py  wan_text_image_to_video.py  wan_text_to_video.py
examples/memory_predict_model/: profile_model.py  train_model.py
plots/: beta.py  scheduler.py
tests/common/: test_case.py  utils.py
tests/models/: test_flux_vae.py  test_sdxl_vae.py
tests/test_algorithm/: test_sampler.py  test_scheduler.py
tests/test_models/: test_siglip.py
tests/test_pipelines/: test_flux_bfl_image.py  test_flux_controlnet.py  test_flux_image.py  test_hunyuan3d_shape.py  test_qwen_image.py  test_qwen_image_controlnet.py  test_sd_controlnet.py  test_sd_image.py  test_sdxl_controlnet.py  test_sdxl_image.py  test_wan_s2v.py  test_wan_s2v_parallel.py  test_wan_video.py  test_wan_video_gguf.py  test_wan_video_parallel.py  test_wan_video_tp.py
tests/test_tokenizers/: test_clip.py  test_qwen2.py  test_t5.py
tests/test_tools/: test_flux_tools.py
tests/tokenizers/: test_clip.py  test_t5.py
(+122 files in other folders)
