[project]
name = "diffsynth_engine"
version = "0.1.0"
authors = [
    { name = "MuseAI x ModelScope" },
]
# uncomment this after adding a readme
# readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "torch >= 2.4.1",
    "torchvision",
    "xformers ; sys_platform == 'linux'",
    "safetensors",
    "gguf",
    "einops",
    "ftfy",
    "regex",
    "sentencepiece",
    "tokenizers",
    "modelscope",
    "flufl.lock",
    "scipy",
    "torchsde",
    "pillow",
    "imageio[ffmpeg]"
]

[project.optional-dependencies]
dev = [
    "diffusers == 0.31.0",
    "transformers == 4.45.2",
    "ruff",
    "scikit-image",
    "pytest",
    "pre-commit"
]
all = [
    "diffsynth-engine[dev]",
]

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["diffsynth_engine*"]

[tool.setuptools.package-data]
diffsynth_engine = ["conf/tokenizers/**/**/*.*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "__pycache__",
    ".git",
    ".idea",
    ".vscode",
    ".venv",
    "venv",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
]
line-length = 120
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
