[project]
name = "diffsynth_engine"
dynamic = ["version"]
authors = [
    { name = "MuseAI x ModelScope" },
]
# uncomment this after adding a readme
# readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "torch >= 2.6",
    "torchvision",
    "numpy",
    "safetensors",
    "gguf",
    "einops",
    "ftfy",
    "regex",
    "sentencepiece",
    "tokenizers",
    "modelscope",
    "flufl.lock",
    "scipy",
    "torchsde",
    "pillow",
    "imageio[ffmpeg]",
    "yunchang ; sys_platform == 'linux'",
    "onnxruntime",
    "opencv-python",
    "moviepy",
    "librosa",
    "scikit-image",
    "trimesh"
]

[project.optional-dependencies]
dev = [
    "diffusers == 0.31.0",
    "transformers == 4.52.4",
    "accelerate",
    "build",
    "ruff",
    "pytest",
    "pre-commit"
]

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["diffsynth_engine*"]
exclude = ["tests", "examples", ".github", "tests/*"]

[tool.setuptools.package-data]
diffsynth_engine = [
    "conf/tokenizers/**/*.*",
    "conf/models/**/*.*",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "__pycache__",
    ".git",
    ".idea",
    ".vscode",
    ".venv",
    "venv",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
]
line-length = 120
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
